--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="style.css">
-	<script type="text/javascript" src="app.js">
+	<link rel="stylesheet" href="css/style.css">
+	<script type="text/javascript" src="js/script.js">
 	</script>
 </head>
 
@@ -13,7 +13,7 @@
 			
 
 
-<p>Bill Amount</p>
+<p>Total Amount</p>
 
 
 
