adjusted tip per person

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 
 
-			<span id="total">0</span>₹
-			<span id="each">each</span>
+			<span id="total">0</span>$
+			<span id="Per person">Per person</span>
 		</div>
 	</div>
 </body>
