changed #Per person to #per

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 			<input type="text" id="amount"
-				placeholder="Amount to be paid"> ₹
+				placeholder="Amount to be paid"> $
 
 			
 
@@ -59,7 +59,7 @@
 
 
 			<span id="total">0</span>$
-			<span id="Per person">Per person</span>
+			<span id="Per">Per person</span>
 		</div>
 	</div>
 </body>
