changed back to each

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 			<span id="total">0</span>$
-			<span id="Per">Per person</span>
+			<span id="each">each</span>
 		</div>
 	</div>
 </body>
