redid all files, something broke before

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 			
 
 
-<p>Total Amount</p>
+<p>Bill Amount</p>
 
 
 
 			<input type="text" id="amount"
 				placeholder="Amount to be paid"> $
-                
-    <p> Gratuity</p>
+
+			
+
+
+<p>How was the service ?</p>
 
 
 
@@ -28,17 +31,17 @@
 				<option selected disabled hidden>
 					Select
 				</option>
-				<option value="0.25">25% - Above and beyond</option>
-				<option value="0.20">20% - Good</option>
-				<option value="0.15">15% - Satisfactory</option>
-				<option value="0.10">10% - Poor</option>
-				<option value="0.05">5% - Terrible</option>
+				<option value="0.25">25% - Top Notch</option>
+				<option value="0.20">20% - Excellent</option>
+				<option value="0.15">15% - Good</option>
+				<option value="0.10">10% - Bad</option>
+				<option value="0.05">5% - Worst</option>
 			</select>
 
 			
 
 
-<p>Total Guest served</p>
+<p>Total number of persons</p>
 
 
 
